--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@
 
 :root{
     --main-color: hsl(230, 82%, 9%);
-    --secondary-color: hsl(300, 100%, 50%);
+    --secondary-color: hsl(225, 100%, 50%);
     --gradient: linear-gradient(135deg, hsl(0, 0%, 20%), hsl(240, 60%, 11%));
     --default-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.5);
     --transition: .1s ease-in-out;
@@ -65,6 +65,7 @@ header .container{
     justify-content: space-between;
     align-items: center;
     padding: 0.2rem 1rem;
+    position: relative;
 }
 
 .logo{
@@ -73,10 +74,10 @@ header .container{
     align-items: center;
     font-family: "Mothproof_Script", "Acme", sans-serif;
     font-size: 1.6rem;
-    height: 35px;
     background: var(--text-gradient);
     background-clip: text;
     color: transparent;
+    line-height: normal;
 }
 
 nav{
@@ -104,7 +105,7 @@ nav a{
 }
 
 .bar-1, .bar-2, .bar-3{
-    width: 20px;
+    width: 23px;
     height: 3px;
     background-color: white;
     transition: 0.2s ease-in-out;
@@ -113,7 +114,6 @@ nav a{
 .clicked .bar-1{
     transform: translateY(8px) rotate(-45deg);
     border-radius: 1rem;
-    width: 20px;
 }
 
 .clicked .bar-2{
