--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@
     --transition: .1s ease-in-out;
     --img-size: calc(((100vw + 100vh) / 2) * .4);
     --text-gradient: linear-gradient(hsl(0, 0%, 100%), hsl(245, 100%, 55%));
+    --heading-gradient: linear-gradient(rgb(255, 61, 61), rgb(209, 0, 0));
 }
 
 body{
@@ -44,6 +45,83 @@ body{
 
 a{
     text-decoration: none;
+}
+
+.msg_bg{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(5px);
+    z-index: 100;
+    opacity: 0;
+    pointer-events: none;
+    transition: var(--transition);
+}
+
+.show_msg{
+    opacity: 1;
+    pointer-events: all;
+}
+
+.msg_box{
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: .4rem;
+    overflow: hidden;
+    max-width: 400px;
+    box-shadow: var(--default-box-shadow);
+    backdrop-filter: blur(20px);
+}
+
+.msg_heading{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--heading-gradient);
+    padding: 0 .2rem;
+    position: relative;
+    z-index: -1;
+    /* box-shadow: var(--default-box-shadow); */
+}
+
+.msg_heading h3{
+    font-weight: lighter;
+}
+
+.x_btn{
+    position: absolute;
+    top: .15rem;
+    right: .15rem;
+}
+
+.cover{
+    position: relative;
+    height: 20px;
+    width: 20px;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: .35rem;
+    border: 2px solid transparent;
+}
+
+.cover i{
+    font-size: 1.2rem;
+    padding: 0 .05rem 0 .1rem;
+}
+
+.message{
+    padding: 1rem 1rem;
+}
+
+.message p{
+    text-align: center;
 }
 
 .container{
@@ -159,10 +237,6 @@ nav a{
     max-width: 100%;
     min-width: 300px;
     transition: var(--transition);
-}
-
-.img_slide{
-    padding-right: 115px;
 }
 
 .content_text h2{
